--- a/package.json
+++ b/package.json
@@ -16,17 +16,34 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@types/eslint": "^9.6.0",
+		"autoprefixer": "^10.4.20",
+		"effect": "^3.6.7",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"lucide-svelte": "^0.436.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
+		"sveltekit-flash-message": "^2.4.4",
+		"sveltekit-superforms": "^2.17.0",
+		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"bits-ui": "^0.21.13",
+		"clsx": "^2.1.1",
+		"formsnap": "^1.0.1",
+		"mode-watcher": "^0.4.1",
+		"svelte-sonner": "^0.3.27",
+		"tailwind-merge": "^2.5.2",
+		"tailwind-variants": "^0.2.1",
+		"zod": "^3.23.8"
+	}
 }
